castxml: update readme with right python command. Update symbols for clang when parsing using castxml. Fix mistakes in vpc parsing where wrong include directories were parsed for client project.

--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ __pycache__
 
 exposed_decl.pypp.txt
 named_tuple.py
+detect_vs.o
 
 # Python
 mp/src/thirdparty/python/PCBuild/Win32-temp-Release/*
